==> CarryLiao5959/xiuos/Ubiquitous/RT-Thread_Fusion_XiUOS/aiit_board/xidatong-riscv64/base-drivers/ch438.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include <drv_io_config.h>
#include <gpiohs.h>
#include "board.h"
#include "ch438.h"
#include <math.h>
#include <sysctl.h>

void CH438_udelay(rt_uint64_t usec)
{
    if(usec <= 0)
    {
        return;
    }
    rt_uint64_t cycle = read_cycle();
    rt_uint64_t nop_all = usec * sysctl_clock_get_freq(SYSCTL_CLOCK_CPU) / 1000000UL;
    while (1)
    {
        if(read_cycle() - cycle >= nop_all)
            break;
    }
    return;
}

void CH438_INIT(void)
{	
	CH438_set_output();
 	gpiohs_set_drive_mode(FPIOA_CH438_NWR, GPIO_DM_OUTPUT);
	gpiohs_set_drive_mode(FPIOA_CH438_NRD, GPIO_DM_OUTPUT);
	gpiohs_set_drive_mode(FPIOA_CH438_ALE, GPIO_DM_OUTPUT);
	gpiohs_set_drive_mode(FPIOA_CH438_INT, GPIO_DM_INPUT_PULL_UP);
	
	gpiohs_set_pin(FPIOA_CH438_NWR, GPIO_PV_HIGH);
	gpiohs_set_pin(FPIOA_CH438_NRD, GPIO_PV_HIGH);
	gpiohs_set_pin(FPIOA_CH438_ALE, GPIO_PV_HIGH);
}

static void CH438_set_output(void)
{
 	gpiohs_set_drive_mode(FPIOA_CH438_D0, GPIO_DM_OUTPUT);
	gpiohs_set_drive_mode(FPIOA_CH438_D1, GPIO_DM_OUTPUT);
	gpiohs_set_drive_mode(FPIOA_CH438_D2, GPIO_DM_OUTPUT);
	gpiohs_set_drive_mode(FPIOA_CH438_D3, GPIO_DM_OUTPUT);
	gpiohs_set_drive_mode(FPIOA_CH438_D4, GPIO_DM_OUTPUT);
	gpiohs_set_drive_mode(FPIOA_CH438_D5, GPIO_DM_OUTPUT);
	gpiohs_set_drive_mode(FPIOA_CH438_D6, GPIO_DM_OUTPUT);
	gpiohs_set_drive_mode(FPIOA_CH438_D7, GPIO_DM_OUTPUT);	
}

static void CH438_set_input(void)
{
	gpiohs_set_drive_mode(FPIOA_CH438_D0, GPIO_DM_INPUT_PULL_UP);
	gpiohs_set_drive_mode(FPIOA_CH438_D1, GPIO_DM_INPUT_PULL_UP);
	gpiohs_set_drive_mode(FPIOA_CH438_D2, GPIO_DM_INPUT_PULL_UP);
	gpiohs_set_drive_mode(FPIOA_CH438_D3, GPIO_DM_INPUT_PULL_UP);
	gpiohs_set_drive_mode(FPIOA_CH438_D4, GPIO_DM_INPUT_PULL_UP);
	gpiohs_set_drive_mode(FPIOA_CH438_D5, GPIO_DM_INPUT_PULL_UP);
	gpiohs_set_drive_mode(FPIOA_CH438_D6, GPIO_DM_INPUT_PULL_UP);
	gpiohs_set_drive_mode(FPIOA_CH438_D7, GPIO_DM_INPUT_PULL_UP);
}

rt_uint8_t ReadCH438Data( rt_uint8_t addr )
{
	rt_uint8_t dat = 0;
	gpiohs_set_pin(FPIOA_CH438_NWR,GPIO_PV_HIGH);	
	gpiohs_set_pin(FPIOA_CH438_NRD,GPIO_PV_HIGH);	
	gpiohs_set_pin(FPIOA_CH438_ALE,GPIO_PV_HIGH);	

	CH438_set_output();
	CH438_udelay(1);
	
	if(addr &0x80)	gpiohs_set_pin(FPIOA_CH438_D7,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D7,GPIO_PV_LOW);	
	if(addr &0x40)	gpiohs_set_pin(FPIOA_CH438_D6,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D6,GPIO_PV_LOW);	
	if(addr &0x20)	gpiohs_set_pin(FPIOA_CH438_D5,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D5,GPIO_PV_LOW);	
	if(addr &0x10)	gpiohs_set_pin(FPIOA_CH438_D4,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D4,GPIO_PV_LOW);	
	if(addr &0x08)	gpiohs_set_pin(FPIOA_CH438_D3,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D3,GPIO_PV_LOW);	
	if(addr &0x04)	gpiohs_set_pin(FPIOA_CH438_D2,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D2,GPIO_PV_LOW);	
	if(addr &0x02)	gpiohs_set_pin(FPIOA_CH438_D1,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D1,GPIO_PV_LOW);	
	if(addr &0x01)	gpiohs_set_pin(FPIOA_CH438_D0,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D0,GPIO_PV_LOW);	
		
	CH438_udelay(1);

	gpiohs_set_pin(FPIOA_CH438_ALE,GPIO_PV_LOW);	
	CH438_udelay(1);		

	CH438_set_input();
	CH438_udelay(1);
	
	gpiohs_set_pin(FPIOA_CH438_NRD,GPIO_PV_LOW);	
	CH438_udelay(1);	

	if (gpiohs_get_pin(FPIOA_CH438_D7))	dat |= 0x80;
	if (gpiohs_get_pin(FPIOA_CH438_D6))	dat |= 0x40;
	if (gpiohs_get_pin(FPIOA_CH438_D5))	dat |= 0x20;
	if (gpiohs_get_pin(FPIOA_CH438_D4))	dat |= 0x10;
	if (gpiohs_get_pin(FPIOA_CH438_D3))	dat |= 0x08;
	if (gpiohs_get_pin(FPIOA_CH438_D2))	dat |= 0x04;
	if (gpiohs_get_pin(FPIOA_CH438_D1))	dat |= 0x02;
	if (gpiohs_get_pin(FPIOA_CH438_D0))	dat |= 0x01;
	
	gpiohs_set_pin(FPIOA_CH438_NRD,GPIO_PV_HIGH);	
	gpiohs_set_pin(FPIOA_CH438_ALE,GPIO_PV_HIGH);	
	CH438_udelay(1);

	return dat;
}

static void WriteCH438Data( rt_uint8_t addr, rt_uint8_t dat )
{
	gpiohs_set_pin(FPIOA_CH438_ALE,GPIO_PV_HIGH);	
	gpiohs_set_pin(FPIOA_CH438_NRD,GPIO_PV_HIGH);	
	gpiohs_set_pin(FPIOA_CH438_NWR,GPIO_PV_HIGH);	

	CH438_set_output();
	CH438_udelay(1);	
	
	if(addr &0x80)	gpiohs_set_pin(FPIOA_CH438_D7,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D7,GPIO_PV_LOW);	
	if(addr &0x40)	gpiohs_set_pin(FPIOA_CH438_D6,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D6,GPIO_PV_LOW);	
	if(addr &0x20)	gpiohs_set_pin(FPIOA_CH438_D5,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D5,GPIO_PV_LOW);	
	if(addr &0x10)	gpiohs_set_pin(FPIOA_CH438_D4,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D4,GPIO_PV_LOW);	
	if(addr &0x08)	gpiohs_set_pin(FPIOA_CH438_D3,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D3,GPIO_PV_LOW);	
	if(addr &0x04)	gpiohs_set_pin(FPIOA_CH438_D2,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D2,GPIO_PV_LOW);	
	if(addr &0x02)	gpiohs_set_pin(FPIOA_CH438_D1,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D1,GPIO_PV_LOW);	
	if(addr &0x01)	gpiohs_set_pin(FPIOA_CH438_D0,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D0,GPIO_PV_LOW);	
	
	CH438_udelay(1);	
	
	gpiohs_set_pin(FPIOA_CH438_ALE,GPIO_PV_LOW);	
	CH438_udelay(1);
	
	if(dat &0x80)	gpiohs_set_pin(FPIOA_CH438_D7,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D7,GPIO_PV_LOW);	
	if(dat &0x40)	gpiohs_set_pin(FPIOA_CH438_D6,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D6,GPIO_PV_LOW);	
	if(dat &0x20)	gpiohs_set_pin(FPIOA_CH438_D5,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D5,GPIO_PV_LOW);	
	if(dat &0x10)	gpiohs_set_pin(FPIOA_CH438_D4,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D4,GPIO_PV_LOW);	
	if(dat &0x08)	gpiohs_set_pin(FPIOA_CH438_D3,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D3,GPIO_PV_LOW);	
	if(dat &0x04)	gpiohs_set_pin(FPIOA_CH438_D2,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D2,GPIO_PV_LOW);	
	if(dat &0x02)	gpiohs_set_pin(FPIOA_CH438_D1,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D1,GPIO_PV_LOW);	
	if(dat &0x01)	gpiohs_set_pin(FPIOA_CH438_D0,GPIO_PV_HIGH);	else	gpiohs_set_pin(FPIOA_CH438_D0,GPIO_PV_LOW);	
	
	CH438_udelay(1);	

	gpiohs_set_pin(FPIOA_CH438_NWR,GPIO_PV_LOW);	
	CH438_udelay(1);	
	
	gpiohs_set_pin(FPIOA_CH438_NWR,GPIO_PV_HIGH);	
	gpiohs_set_pin(FPIOA_CH438_ALE,GPIO_PV_HIGH);	
	CH438_udelay(1);	

	CH438_set_input();

	return;
}

static rt_err_t extuart_control(struct rt_serial_device *serial, int cmd, void *arg)
{
	rt_uint16_t ext_uart_no = serial->config.reserved;
	static rt_uint16_t register_flag = 0;

    switch (cmd)
    {
    case RT_DEVICE_CTRL_CLR_INT:
		if(1 == register_flag)
		{
			gpiohs_irq_unregister(FPIOA_CH438_INT);
			register_flag = 0;
		}
        break;
    case RT_DEVICE_CTRL_SET_INT:
		if(0 == register_flag)
		{
			gpiohs_set_drive_mode(FPIOA_CH438_INT, GPIO_DM_INPUT_PULL_UP);
    		gpiohs_set_pin_edge(FPIOA_CH438_INT,GPIO_PE_FALLING);
			gpiohs_irq_register(FPIOA_CH438_INT, 1, CH438Irq, (void*)serial);
			register_flag = 1;
		}
		break;
    }
    return (RT_EOK);
}
